force-app/main/default/objects/Activity/fields/DTask_Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>DTask_Flow_Name__c</fullName>
    <inlineHelpText>If using a flow/wizard task, select the API name of the flow.  If the flow you need isn&apos;t listed, an admin needs to add it to the picklist from Object Manager.</inlineHelpText>
    <label>DTask Flow Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DTask_Generic</fullName>
            </value>
            <value>
                <fullName>DTask_User_Contact_Update_Contact_Info</fullName>
            </value>
            <value>
                <fullName>DTask_User_Contact_Upload_I9</fullName>
            </value>
            <value>
                <fullName>DTask_User_Contact_Upload_OF306</fullName>
            </value>
            <value>
                <fullName>DTask_User_Update_Contact_Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>