force-app/main/default/objects/Activity/fields/DTask_Link_Label__c.field-meta.xml
<CustomField>
    <fullName>DTask_Link_Label__c</fullName>
    <inlineHelpText>If using a link task, provide a label to display in the button that will appear.  A default value is provided.  A value in this field will not affect other task types.</inlineHelpText>
    <label>DTask Link Label</label>
    <length>155</length>
    <type>Text</type>
</CustomField>