force-app/main/default/objects/Activity/fields/DTask_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>DTask_Link_URL__c</fullName>
    <inlineHelpText>If using a link task, provide a URL here.  A default value is provided.  A value in this field will not affect other task types.</inlineHelpText>
    <label>DTask Link URL</label>
    <type>Url</type>
</CustomField>