force-app/main/default/objects/Activity/fields/DTask_Type__c.field-meta.xml
<CustomField>
    <fullName>DTask_Type__c</fullName>
    <inlineHelpText>Select a value only if the activity is being used with the Dynamic Tasks component</inlineHelpText>
    <label>DTask Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Task</fullName>
                <default>true</default>
                <label>General Task</label>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>