force-app/main/default/objects/Activity/fields/wkdw__TransitionPlanTask__c.field-meta.xml
<CustomField>
    <fullName>wkdw__TransitionPlanTask__c</fullName>
    <description>The transition plan task that this task was generated from</description>
    <label>Transition Plan Task</label>
    <length>255</length>
    <type>Text</type>
</CustomField>