force-app/main/default/objects/Activity/fields/wkdw__TransitionPlanTemplateTaskId__c.field-meta.xml
<CustomField>
    <fullName>wkdw__TransitionPlanTemplateTaskId__c</fullName>
    <description>The SF Id of the Transition Plan Template Task that this Task was generated from</description>
    <label>Transition Plan Template Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>